# bank

./: .env  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 34c4f6586e70_initial.py  b1ad765ee3d3_добавление_записей_в_таблицы.py
src/: config.py  database.py  main.py
src/db/: models.py  schemas.py  serialization.py  service.py
src/roles/: admin.py  for_all.py  user.py
src/routes/: admin_route.py  auth.py  user_route.py  webhook.py
src/static/: admin.html  auth.html  user.html  webhook.html
src/tests/: admin.py  auth.py  conftest.py  user.py  webhook.py
