[tool.poetry]
name = "payment-system"
version = "0.1.0"
description = ""
authors = ["jekxkan <smirnova.eyu@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sanic = "^24.12.0"
uvicorn = "^0.34.0"
alembic = "^1.14.1"
pydantic-settings = "^2.7.1"
asyncpg = "^0.30.0"
sanic-session = "^0.8.0"
sanic-auth = "^0.3.0"
marshmallow = "^3.26.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
